[gd_scene load_steps=72 format=2]

[ext_resource path="res://src/Actors/NewStateMachine/InputListener.gd" type="Script" id=1]
[ext_resource path="res://src/Actors/Props/RideArmor/Punch.gd" type="Script" id=2]
[ext_resource path="res://src/Actors/Props/RideArmor/Ride.gd" type="Script" id=3]
[ext_resource path="res://src/Actors/Props/RideArmor/RepeatAnimation.gd" type="Script" id=4]
[ext_resource path="res://src/Actors/Props/RideArmor/ActiveArea2D.gd" type="Script" id=5]
[ext_resource path="res://src/Actors/Props/RideArmor/ride_armor.res" type="SpriteFrames" id=6]
[ext_resource path="res://src/Actors/Props/RideArmor/Eject.gd" type="Script" id=7]
[ext_resource path="res://src/Actors/Props/RideArmor/Start.gd" type="Script" id=8]
[ext_resource path="res://src/Actors/Props/RideArmor/Walk.gd" type="Script" id=9]
[ext_resource path="res://src/Actors/Props/RideArmor/HoverJump.gd" type="Script" id=10]
[ext_resource path="res://src/Actors/Props/RideArmor/Fall.gd" type="Script" id=11]
[ext_resource path="res://src/Actors/Props/RideArmor/Dash.gd" type="Script" id=12]
[ext_resource path="res://src/Actors/Props/RideArmor/Idle.gd" type="Script" id=13]
[ext_resource path="res://src/Actors/NewStateMachine/debugger.gd" type="Script" id=14]
[ext_resource path="res://src/Actors/Props/RideArmor/Shot.gd" type="Script" id=15]
[ext_resource path="res://src/Actors/Props/RideArmor/screenshaker.gd" type="Script" id=16]
[ext_resource path="res://src/Actors/Props/RideArmor/RideArmorShot.tscn" type="PackedScene" id=17]
[ext_resource path="res://src/Effects/Materials/x_dash_smoke.tres" type="Material" id=18]
[ext_resource path="res://src/Effects/Textures/smoke.png" type="Texture2D" id=19]
[ext_resource path="res://src/Actors/Props/RideArmor/land_particles.gd" type="Script" id=20]
[ext_resource path="res://src/Actors/Props/RideArmor/RideArmor.gd" type="Script" id=21]
[ext_resource path="res://src/Effects/Materials/ridearmor_land.tres" type="Material" id=22]
[ext_resource path="res://src/Actors/Props/RideArmor/Hurtbox.gd" type="Script" id=23]
[ext_resource path="res://src/Sounds/Ridearmor - Step.ogg" type="AudioStream" id=24]
[ext_resource path="res://src/Actors/NewStateMachine/audioplayer.gd" type="Script" id=25]
[ext_resource path="res://src/Sounds/Ridearmor - Rise.ogg" type="AudioStream" id=26]
[ext_resource path="res://src/Actors/Props/RideArmor/ride_armor_torso.res" type="SpriteFrames" id=27]
[ext_resource path="res://src/Sounds/Ridearmor - Jump.ogg" type="AudioStream" id=28]
[ext_resource path="res://src/Sounds/Ridearmor - Dash.ogg" type="AudioStream" id=29]
[ext_resource path="res://src/Sounds/Ridearmor - Punch.ogg" type="AudioStream" id=30]
[ext_resource path="res://src/Sounds/Ridearmor - Shot.ogg" type="AudioStream" id=31]
[ext_resource path="res://src/Sounds/Ridearmor - Powerdown.ogg" type="AudioStream" id=32]
[ext_resource path="res://src/Sounds/Ridearmor - Startup.ogg" type="AudioStream" id=33]
[ext_resource path="res://src/Actors/Props/RideArmor/pilot_sprites/ra_x.res" type="SpriteFrames" id=34]
[ext_resource path="res://src/Actors/Props/RideArmor/pilot_sprites/ra_chest.res" type="SpriteFrames" id=35]
[ext_resource path="res://src/Actors/Props/RideArmor/Shutdown.gd" type="Script" id=36]
[ext_resource path="res://src/Sounds/DAMAGE.wav" type="AudioStream" id=37]
[ext_resource path="res://src/Actors/Props/RideArmor/Damage.gd" type="Script" id=38]
[ext_resource path="res://src/Actors/Props/RideArmor/ride_armor_legs.res" type="SpriteFrames" id=39]
[ext_resource path="res://src/Actors/Props/RideArmor/ride_armor_neararm.res" type="SpriteFrames" id=40]
[ext_resource path="res://src/Effects/Materials/mat_ridearmor.tres" type="Material" id=41]
[ext_resource path="res://src/Actors/Props/RideArmor/ride_armor_fararm.res" type="SpriteFrames" id=42]
[ext_resource path="res://src/Actors/Props/RideArmor/Death.gd" type="Script" id=43]
[ext_resource path="res://src/Actors/Props/RideArmor/ride_armor_cannon.res" type="SpriteFrames" id=44]
[ext_resource path="res://src/Actors/Props/RideArmor/ride_armor_back.res" type="SpriteFrames" id=45]
[ext_resource path="res://src/Effects/Materials/BossExplosion.tres" type="Material" id=46]
[ext_resource path="res://src/Effects/Explosion Particles.tscn" type="PackedScene" id=47]
[ext_resource path="res://src/Effects/Textures/blue_explosion.png" type="Texture2D" id=48]
[ext_resource path="res://src/Effects/Textures/remains_bike.png" type="Texture2D" id=49]
[ext_resource path="res://src/Effects/Materials/RemainsParticle.tres" type="Material" id=50]
[ext_resource path="res://src/Actors/Props/RideArmor/pilot.gd" type="Script" id=51]
[ext_resource path="res://src/Actors/Props/RideArmor/pilot_sprites/ra_arms.res" type="SpriteFrames" id=52]
[ext_resource path="res://src/Actors/Props/RideArmor/pilot_sprites/ra_head.res" type="SpriteFrames" id=53]
[ext_resource path="res://src/Actors/Props/RideArmor/armor.gd" type="Script" id=54]
[ext_resource path="res://src/Actors/Props/RideArmor/RideArmorPunch.tscn" type="PackedScene" id=55]
[ext_resource path="res://SpriteEffect.gd" type="Script" id=56]
[ext_resource path="res://src/Effects/Textures/ridearmor_fire.png" type="Texture2D" id=57]
[ext_resource path="res://src/Effects/Textures/ridearmor_vento.png" type="Texture2D" id=58]
[ext_resource path="res://src/Effects/Textures/ridearmor_punch.png" type="Texture2D" id=59]
[ext_resource path="res://src/Sounds/59 - MMX - Enemy Die (4).wav" type="AudioStream" id=60]
[ext_resource path="res://src/Actors/Props/RideArmor/CollisionUpperHalf.gd" type="Script" id=61]
[ext_resource path="res://src/Actors/Props/RideArmor/CrushCheck.gd" type="Script" id=62]
[ext_resource path="res://src/Sounds/OST - RideArmor - Loop.ogg" type="AudioStream" id=63]
[ext_resource path="res://src/Sounds/OST - RideArmor - Intro.ogg" type="AudioStream" id=64]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 26.5 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 17, 14.495 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 17, 8 )

[sub_resource type="CanvasItemMaterial" id=5]
particles_animation = true
particles_anim_h_frames = 3
particles_anim_v_frames = 3
particles_anim_loop = false

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 14.25, 16 )

[sub_resource type="CanvasItemMaterial" id=6]
particles_animation = true
particles_anim_h_frames = 4
particles_anim_v_frames = 4
particles_anim_loop = false

[sub_resource type="CanvasItemMaterial" id=7]
render_priority = -1
particles_animation = true
particles_anim_h_frames = 6
particles_anim_v_frames = 3
particles_anim_loop = false

[node name="RideArmor" type="CharacterBody2D" groups=["Props"]]
process_mode = 1
z_index = 3
collision_layer = 8192
collision_mask = 536872705
script = ExtResource( 21 )
max_health = 36.0
song_intro = ExtResource( 64 )
song_loop = ExtResource( 63 )

[node name="Hurtbox" type="CharacterBody2D" parent="." groups=["Player", "Props"]]
visible = false
collision_layer = 2
collision_mask = 0
script = ExtResource( 23 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
modulate = Color( 0, 1, 0.576471, 1 )
position = Vector2( 0, 16.5 )
z_index = 8
shape = SubResource( 4 )

[node name="CrushCheck" type="Node2D" parent="."]
position = Vector2( 0, 21 )
script = ExtResource( 62 )
parent_signal = "death"

[node name="death_down" type="RayCast2D" parent="CrushCheck"]
modulate = Color( 0.172549, 1, 0, 1 )
z_index = 11
z_as_relative = false
enabled = true
target_position = Vector2( 0, 24 )

[node name="death_up" type="RayCast2D" parent="CrushCheck"]
z_index = 11
z_as_relative = false
enabled = true
target_position = Vector2( 0, -8 )

[node name="death_right" type="RayCast2D" parent="CrushCheck"]
position = Vector2( 0, -10 )
z_index = 11
z_as_relative = false
enabled = true
target_position = Vector2( 24, 0 )

[node name="death_left" type="RayCast2D" parent="CrushCheck"]
position = Vector2( 0, -10 )
z_index = 11
z_as_relative = false
enabled = true
target_position = Vector2( -24, 0 )

[node name="death_right2" type="RayCast2D" parent="CrushCheck"]
modulate = Color( 0.172549, 1, 0, 1 )
position = Vector2( 0, 12 )
z_index = 11
z_as_relative = false
enabled = true
target_position = Vector2( 24, 0 )

[node name="death_left2" type="RayCast2D" parent="CrushCheck"]
modulate = Color( 0.172549, 1, 0, 1 )
position = Vector2( 0, 12 )
z_index = 11
z_as_relative = false
enabled = true
target_position = Vector2( -24, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 28.495 )
z_index = 13
shape = SubResource( 1 )

[node name="CollisionUpperHalf" type="CollisionShape2D" parent="."]
position = Vector2( 0, 6 )
z_index = 13
shape = SubResource( 8 )
disabled = true
script = ExtResource( 61 )

[node name="animatedSprite" type="AnimatedSprite2D" parent="."]
material = ExtResource( 41 )
position = Vector2( 0, 25 )
z_index = 5
frames = ExtResource( 6 )
animation = "deactivated"

[node name="near_arm" type="AnimatedSprite2D" parent="animatedSprite"]
material = ExtResource( 41 )
z_index = 2
frames = ExtResource( 40 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 4 )
reference = NodePath("..")

[node name="torso" type="AnimatedSprite2D" parent="animatedSprite"]
material = ExtResource( 41 )
z_index = 1
frames = ExtResource( 27 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 4 )
reference = NodePath("..")

[node name="head_armor" type="AnimatedSprite2D" parent="animatedSprite/torso"]
visible = false
frames = ExtResource( 53 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 54 )
reference = NodePath("../..")

[node name="body_armor" type="AnimatedSprite2D" parent="animatedSprite/torso"]
visible = false
frames = ExtResource( 35 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 54 )
reference = NodePath("../..")

[node name="arms_armor" type="AnimatedSprite2D" parent="animatedSprite/torso"]
visible = false
frames = ExtResource( 52 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 54 )
reference = NodePath("../..")

[node name="pilot" type="AnimatedSprite2D" parent="animatedSprite/torso"]
z_index = -1
frames = ExtResource( 34 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 51 )
reference = NodePath("../..")

[node name="legs" type="AnimatedSprite2D" parent="animatedSprite"]
material = ExtResource( 41 )
frames = ExtResource( 39 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 4 )
reference = NodePath("..")

[node name="back" type="AnimatedSprite2D" parent="animatedSprite"]
material = ExtResource( 41 )
z_index = -2
frames = ExtResource( 45 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 4 )
reference = NodePath("..")

[node name="cannon" type="AnimatedSprite2D" parent="animatedSprite"]
material = ExtResource( 41 )
z_index = -3
frames = ExtResource( 44 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 4 )
reference = NodePath("..")

[node name="far_arm" type="AnimatedSprite2D" parent="animatedSprite"]
material = ExtResource( 41 )
z_index = -4
frames = ExtResource( 42 )
animation = "deactivated"
offset = Vector2( 0, -15 )
script = ExtResource( 4 )
reference = NodePath("..")

[node name="screenshaker" type="Node" parent="."]
script = ExtResource( 16 )

[node name="dash_particles" type="GPUParticles2D" parent="."]
material = SubResource( 5 )
position = Vector2( 0, 43 )
z_index = 5
emitting = false
amount = 6
lifetime = 0.75
one_shot = true
explosiveness = 0.75
local_coords = false
process_material = ExtResource( 22 )
texture = ExtResource( 19 )
script = ExtResource( 20 )

[node name="StateMachineVisual" type="Label" parent="."]
visible = false
offset_left = -24.0
offset_top = -68.0
offset_right = 16.0
offset_bottom = -54.0
text = "hello"
script = ExtResource( 14 )

[node name="Ride" type="Node2D" parent="."]
script = ExtResource( 3 )
hard_conflicts = [ NodePath("../Eject") ]

[node name="area2D" type="Area2D" parent="Ride"]
position = Vector2( 0, 32 )
z_index = 10
collision_layer = 0
collision_mask = 2
script = ExtResource( 5 )
group = "Player"
exceptions = [ "Props" ]

[node name="collisionShape2D" type="CollisionShape2D" parent="Ride/area2D"]
modulate = Color( 0.937255, 0.878431, 0, 1 )
position = Vector2( -15.25, -6 )
shape = SubResource( 2 )

[node name="ceiling_check" type="RayCast2D" parent="Ride"]
position = Vector2( -14, 41 )
z_index = 10
enabled = true
target_position = Vector2( 0, -36 )

[node name="ceiling_check2" type="RayCast2D" parent="Ride"]
position = Vector2( 14, 41 )
z_index = 10
enabled = true
target_position = Vector2( 0, -36 )

[node name="Start" type="Node2D" parent="."]
script = ExtResource( 8 )
hard_conflicts = [ NodePath("../Eject") ]

[node name="startup" type="AudioStreamPlayer2D" parent="Start"]
stream = ExtResource( 33 )
volume_db = -8.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )

[node name="vento" type="Sprite2D" parent="Start"]
visible = false
position = Vector2( 20, 18 )
z_index = 16
texture = ExtResource( 58 )
hframes = 2
vframes = 3
script = ExtResource( 56 )
animation_speed = 12.0
one_shot = true

[node name="Walk" type="Node2D" parent="."]
script = ExtResource( 9 )
hard_conflicts = [ NodePath("../Start"), NodePath("../Jump"), NodePath("../Punch"), NodePath("../Dash"), NodePath("../Fall"), NodePath("../Eject") ]

[node name="move_right" type="Node" parent="Walk"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "move_right" ]

[node name="move_left" type="Node" parent="Walk"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "move_left" ]

[node name="step" type="AudioStreamPlayer2D" parent="Walk"]
stream = ExtResource( 24 )
volume_db = -9.369
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )
minimum_time = 0.15

[node name="Jump" type="Node2D" parent="."]
script = ExtResource( 10 )
hard_conflicts = [ NodePath("../Start"), NodePath("../Eject") ]
soft_conflicts = [ NodePath("../Dash"), NodePath("../Punch") ]
upward_time = 0.15
jump_speed = 220.0

[node name="move_right" type="Node" parent="Jump"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "move_right" ]

[node name="jump" type="Node" parent="Jump"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "jump" ]

[node name="move_left" type="Node" parent="Jump"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "move_left" ]

[node name="jump_sound" type="AudioStreamPlayer2D" parent="Jump"]
stream = ExtResource( 28 )
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )

[node name="rise" type="AudioStreamPlayer2D" parent="Jump"]
stream = ExtResource( 26 )
volume_db = -8.302
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )
minimum_time = 0.25

[node name="Dash" type="Node2D" parent="."]
script = ExtResource( 12 )
hard_conflicts = [ NodePath("../Start"), NodePath("../Eject") ]
soft_conflicts = [ NodePath("../Jump"), NodePath("../Punch") ]
dash_speed = 260.0
duration = 0.85

[node name="move_right" type="Node" parent="Dash"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "move_right" ]

[node name="move_left" type="Node" parent="Dash"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "move_left" ]

[node name="dash" type="Node" parent="Dash"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "dash" ]

[node name="dash_particles" type="GPUParticles2D" parent="Dash"]
material = SubResource( 5 )
position = Vector2( 0, 43 )
z_index = 5
emitting = false
amount = 11
lifetime = 0.75
local_coords = false
process_material = ExtResource( 18 )
texture = ExtResource( 19 )

[node name="dash_sound" type="AudioStreamPlayer2D" parent="Dash"]
stream = ExtResource( 29 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )

[node name="Fall" type="Node2D" parent="."]
script = ExtResource( 11 )
hard_conflicts = [ NodePath("../Start"), NodePath("../Dash"), NodePath("../Jump"), NodePath("../Punch"), NodePath("../Eject") ]

[node name="move_right" type="Node" parent="Fall"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "move_right" ]

[node name="move_left" type="Node" parent="Fall"]
script = ExtResource( 1 )
every_frame = true
inputs = [ "move_left" ]

[node name="Punch" type="Node2D" parent="."]
script = ExtResource( 2 )
hard_conflicts = [ NodePath("../Start"), NodePath("../Eject") ]
soft_conflicts = [ NodePath("../Dash"), NodePath("../Jump") ]
punch_projectile = ExtResource( 55 )

[node name="fire" type="Node" parent="Punch"]
script = ExtResource( 1 )
inputs = [ "fire" ]

[node name="punch" type="AudioStreamPlayer2D" parent="Punch"]
stream = ExtResource( 30 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )
minimum_time = 0.15

[node name="punch_position" type="Node2D" parent="Punch"]
position = Vector2( 36, 11 )

[node name="wind" type="Sprite2D" parent="Punch"]
visible = false
position = Vector2( 44, 10 )
z_index = 16
texture = ExtResource( 59 )
hframes = 3
vframes = 2
script = ExtResource( 56 )
animation_speed = 38.0
one_shot = true

[node name="Shot" type="Node2D" parent="."]
position = Vector2( 0, -10 )
script = ExtResource( 15 )
hard_conflicts = [ NodePath("../Start") ]
projectile = ExtResource( 17 )

[node name="alt_fire" type="Node" parent="Shot"]
script = ExtResource( 1 )
inputs = [ "alt_fire" ]

[node name="shot_position" type="Node2D" parent="Shot"]
position = Vector2( 28, 0 )
scale = Vector2( 0.3125, 0.28125 )

[node name="shot" type="AudioStreamPlayer2D" parent="Shot"]
stream = ExtResource( 31 )
volume_db = -3.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )

[node name="fire" type="Sprite2D" parent="Shot"]
visible = false
position = Vector2( 45, 0 )
z_index = 16
texture = ExtResource( 57 )
hframes = 3
vframes = 2
script = ExtResource( 56 )
animation_speed = 18.0
one_shot = true

[node name="Idle" type="Node2D" parent="."]
script = ExtResource( 13 )

[node name="Damage" type="Node2D" parent="."]
script = ExtResource( 38 )
hard_conflicts = [ NodePath("../Death") ]

[node name="dmg" type="AudioStreamPlayer2D" parent="Damage"]
stream = ExtResource( 37 )
volume_db = -6.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )

[node name="Death" type="Node2D" parent="."]
script = ExtResource( 43 )

[node name="explosion_sfx" type="AudioStreamPlayer2D" parent="Death"]
stream = ExtResource( 60 )
volume_db = -3.0
pitch_scale = 0.75
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )

[node name="explosion" parent="Death" instance=ExtResource( 47 )]
material = SubResource( 6 )
position = Vector2( 0, 12 )
z_index = 12
amount = 24
process_material = ExtResource( 46 )
texture = ExtResource( 48 )

[node name="remains" type="GPUParticles2D" parent="Death"]
material = SubResource( 7 )
z_index = -1
emitting = false
amount = 24
lifetime = 2.0
one_shot = true
explosiveness = 1.0
visibility_rect = Rect2( -600, -100, 1200, 200 )
process_material = ExtResource( 50 )
texture = ExtResource( 49 )

[node name="Shutdown" type="Node2D" parent="."]
script = ExtResource( 36 )
hard_conflicts = [ NodePath("../Ride") ]

[node name="Eject" type="Node2D" parent="."]
script = ExtResource( 7 )
hard_conflicts = [ NodePath("../Start") ]

[node name="up" type="Node" parent="Eject"]
script = ExtResource( 1 )
inputs = [ "move_up" ]

[node name="jump" type="Node" parent="Eject"]
script = ExtResource( 1 )
inputs = [ "jump" ]

[node name="shutdown" type="AudioStreamPlayer2D" parent="Eject"]
stream = ExtResource( 32 )
volume_db = -8.0
max_distance = 600.0
bus = "SFX"
script = ExtResource( 25 )

[connection signal="damage" from="." to="Damage" method="_on_damage"]
[connection signal="death" from="." to="Hurtbox" method="deactivate"]
[connection signal="death" from="." to="animatedSprite/torso/head_armor" method="hide"]
[connection signal="death" from="." to="animatedSprite/torso/body_armor" method="hide"]
[connection signal="death" from="." to="animatedSprite/torso/arms_armor" method="hide"]
[connection signal="death" from="." to="animatedSprite/torso/pilot" method="hide"]
[connection signal="death" from="." to="screenshaker" method="_on_RideArmor_land"]
[connection signal="death" from="." to="Ride" method="deactivate"]
[connection signal="death" from="." to="Ride" method="EndAbility"]
[connection signal="death" from="." to="Death" method="on_death"]
[connection signal="force_eject" from="." to="Eject" method="stage_end_execute"]
[connection signal="grab_eject" from="." to="Eject" method="_on_signal"]
[connection signal="land" from="." to="screenshaker" method="_on_RideArmor_land"]
[connection signal="land" from="." to="dash_particles" method="_on_RideArmor_land"]
[connection signal="land" from="." to="Start/vento" method="emit"]
[connection signal="land" from="." to="Walk/step" method="play_rp"]
[connection signal="land" from="." to="Jump" method="_on_land"]
[connection signal="land" from="." to="Dash" method="reset_dash_jump"]
[connection signal="land" from="." to="Dash" method="_on_land"]
[connection signal="land" from="." to="Punch" method="_on_land"]
[connection signal="new_direction" from="." to="." method="_on_new_direction"]
[connection signal="new_direction" from="." to="Ride" method="_on_new_direction"]
[connection signal="new_direction" from="." to="Start" method="on_new_direction"]
[connection signal="new_direction" from="." to="Punch" method="_on_new_direction"]
[connection signal="new_direction" from="." to="Shot" method="_on_new_direction"]
[connection signal="not_on_floor" from="." to="Fall" method="_on_signal"]
[connection signal="on_floor" from="." to="Dash" method="_on_land"]
[connection signal="on_floor" from="." to="Idle" method="_on_signal"]
[connection signal="spawned" from="." to="Shutdown" method="_on_signal"]
[connection signal="zero_health" from="." to="Death" method="_on_signal"]
[connection signal="rider_off" from="Ride" to="." method="play_stage_song"]
[connection signal="rider_on" from="Ride" to="." method="play_ridearmor_song"]
[connection signal="rider_on" from="Ride" to="animatedSprite/torso/head_armor" method="_on_signal"]
[connection signal="rider_on" from="Ride" to="animatedSprite/torso/body_armor" method="_on_signal"]
[connection signal="rider_on" from="Ride" to="animatedSprite/torso/arms_armor" method="_on_signal"]
[connection signal="rider_on" from="Ride" to="Start" method="_on_signal"]
[connection signal="body_entered" from="Ride/area2D" to="Ride/area2D" method="_on_area2D_body_entered"]
[connection signal="body_exited" from="Ride/area2D" to="Ride/area2D" method="_on_area2D_body_exited"]
[connection signal="group_body_present" from="Ride/area2D" to="Ride" method="_on_body_enter"]
[connection signal="stand_up" from="Start" to="CollisionUpperHalf" method="_on_Start_stand_up"]
[connection signal="pressed" from="Walk/move_right" to="Walk" method="_on_signal"]
[connection signal="pressed" from="Walk/move_right" to="Walk" method="_on_move_right"]
[connection signal="released" from="Walk/move_right" to="Walk" method="_on_release"]
[connection signal="pressed" from="Walk/move_left" to="Walk" method="_on_signal"]
[connection signal="pressed" from="Walk/move_left" to="Walk" method="_on_move_left"]
[connection signal="released" from="Walk/move_left" to="Walk" method="_on_release"]
[connection signal="dash_jump" from="Jump" to="Dash" method="_on_dash_jump"]
[connection signal="stop" from="Jump" to="Fall" method="_on_Jump_stop"]
[connection signal="pressed" from="Jump/move_right" to="Jump" method="_on_move_right"]
[connection signal="released" from="Jump/move_right" to="Jump" method="_on_move_release"]
[connection signal="just_pressed" from="Jump/jump" to="Jump" method="_on_signal"]
[connection signal="released" from="Jump/jump" to="Jump" method="_on_release"]
[connection signal="pressed" from="Jump/move_left" to="Jump" method="_on_move_left"]
[connection signal="released" from="Jump/move_left" to="Jump" method="_on_move_release"]
[connection signal="pressed" from="Dash/move_right" to="Dash" method="_on_move_right"]
[connection signal="released" from="Dash/move_right" to="Dash" method="_on_release_right"]
[connection signal="pressed" from="Dash/move_left" to="Dash" method="_on_move_left"]
[connection signal="released" from="Dash/move_left" to="Dash" method="_on_release_left"]
[connection signal="just_pressed" from="Dash/dash" to="Dash" method="_on_signal"]
[connection signal="released" from="Dash/dash" to="Dash" method="_on_release"]
[connection signal="pressed" from="Fall/move_right" to="Fall" method="_on_move_right"]
[connection signal="released" from="Fall/move_right" to="Fall" method="_on_move_release"]
[connection signal="pressed" from="Fall/move_left" to="Fall" method="_on_move_left"]
[connection signal="released" from="Fall/move_left" to="Fall" method="_on_move_release"]
[connection signal="just_pressed" from="Punch/fire" to="Punch" method="_on_fire"]
[connection signal="just_pressed" from="Shot/alt_fire" to="Shot" method="_on_signal"]
[connection signal="knockback" from="Damage" to="Fall" method="_on_knockback"]
[connection signal="knockback" from="Damage" to="Punch" method="_on_knockback"]
[connection signal="knockback" from="Damage" to="Idle" method="_on_knockback"]
[connection signal="lay_down" from="Eject" to="CollisionUpperHalf" method="_on_Eject_lay_down"]
[connection signal="stop" from="Eject" to="Shutdown" method="_on_Eject_stop"]
[connection signal="pressed" from="Eject/up" to="Eject" method="_on_up_pressed"]
[connection signal="released" from="Eject/up" to="Eject" method="_on_up_released"]
[connection signal="just_pressed" from="Eject/jump" to="Eject" method="_on_jump_just_pressed"]
